(lang dune 2.7)
(version "0.6.1")
(name tsdl-image)
(generate_opam_files true)
(license BSD-3-Clause)
(maintainers "Vu Ngoc San <san.vu-ngoc@laposte.net>")
(authors "Julian Squires <julian@cipht.net>")
(source (github sanette/tsdl-image))

(package
 (name tsdl-image)
 (synopsis "SDL2_Image bindings to go with Tsdl")
 (description
   "tsdl-image provides bindings to SDL2_Image intended to be used with Tsdl.")
 (tags ("tsdl" "SDL" "images" "graphics" "bindings"))
 (depends
  (ocaml (>= 4.03))
  (tsdl (>= 0.9.1))
  conf-sdl2-image
  (ctypes (>= 0.4.0))
   ctypes-foreign))
