(library
  (name tsdl_image)
  (public_name tsdl-image)
  (modules tsdl_image build_config)
  (private_modules build_config)
  (libraries ctypes tsdl)
  (c_library_flags -lSDL2_image))

(rule
  (target build_config.ml)
  (action
    (with-stdout-to
      %{target}
      (echo "let system = \"%{system}\""))))
