(library
 (name tsdl_image)
 (public_name tsdl-image)
 (modules tsdl_image build_config)
 (private_modules build_config)
 (libraries tsdl)
 (c_library_flags
  "-Wl,-no-as-needed" (:include c_library_flags.sexp))
 (foreign_stubs
  (language c)
  (names empty)
  (flags (:include c_flags.sexp)))
)

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))

(rule
 (target build_config.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let system = \"%{system}\""))))
